# CardLink

./: JUSTFILE  README.md  diagram.drawio
functions/: Cargo.toml  DEPLOY.md  create-link.json
functions/create-link/: Cargo.toml
functions/list-links/: Cargo.toml
infra/: .gitignore  .terraform.lock.hcl  NOTE.md  api_gateway.tf  cognito.tf  dynamodb.tf  lambda.tf  main.tf  outputs.tf  variables.tf
tests/: package.json  pnpm-lock.yaml
tests/src/: main.ts
